Entities being mapped.